--- a/comunida/bundleconfig.json
+++ b/comunida/bundleconfig.json
@@ -1,24 +1,23 @@
-﻿// Configure bundling and minification for the project.
-// More info at https://go.microsoft.com/fwlink/?LinkId=808241
 [
-  {
-    "outputFileName": "wwwroot/css/site.min.css",
-    // An array of relative input file paths. Globbing patterns supported
-    "inputFiles": [
-      "wwwroot/css/site.css"
-    ]
-  },
   {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
-      "wwwroot/js/site.js"
+      "wwwroot/js/bootstrap-datepicker.js",
+      "wwwroot/js/bootstrap-select.js",
+      "wwwroot/js/site.js",
+      "wwwroot/js/ct-paper.js",
+      "wwwroot/js/ct-paper-checkbox.js",
+      "wwwroot/js/ct-paper-radio.js"
     ],
-    // Optionally specify minification options
     "minify": {
       "enabled": true,
       "renameLocals": true
-    },
-    // Optionally generate .map file
-    "sourceMap": false
+    }
+  },
+  {
+    "outputFileName": "wwwroot/css/site.min.css",
+    "inputFiles": [
+      "wwwroot/css/site.css"
+    ]
   }
 ]
